# credit-scoring

./: README.md  describe_data.ipynb  pyproject.toml  research_work.ipynb
docs/: grid_search.drawio  research_final.docx
