[tool.poetry]
name = "research_work"
version = "0.1.0"
description = ""
authors = ["ZZaRRyaDD <odddellarobea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.22.2"
pandas = "1.4.0"
ipykernel = "6.9.0"
notebook = "6.4.8"
sklearn = "0.0"
scipy = "1.9.2"
jupyter = "1.0.0"
matplotlib = "3.6.1"
scikit-optimize = "0.9.0"
seaborn = "0.12.0"
imblearn = "^0.0"
sklearn-genetic-opt = "^0.9.0"
boruta = "^0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
